--- a/app/src/main/res/layout/fragment_inicio_solicitar_curso.xml
+++ b/app/src/main/res/layout/fragment_inicio_solicitar_curso.xml
@@ -37,7 +37,8 @@
                 <Spinner
                     android:id="@+id/inicio_solicitud_curso_spinner"
                     android:layout_width="252dp"
-                    android:layout_height="38dp" />
+                    android:layout_height="38dp"
+                    android:layout_below="@+id/Categoria"/>
 
             </LinearLayout>
 
@@ -147,26 +148,12 @@
                 android:text="@string/inicio_cancelar_curso"
                 android:theme="@style/AppTheme.Bienvenida_Button" />
 
-            <Button
-                android:id="@+id/button2"
-                android:layout_width="70dp"
-                android:layout_height="41dp"
-                android:text="fecha"
-                tools:layout_editor_absoluteX="24dp"
-                tools:layout_editor_absoluteY="309dp" />
-
-            <Button
-                android:id="@+id/button3"
-                android:layout_width="64dp"
-                android:layout_height="41dp"
-                android:text="hora"
-                tools:layout_editor_absoluteX="176dp"
-                tools:layout_editor_absoluteY="309dp" />
-
-            <fragment
-                android:layout_width="match_parent"
-                android:layout_height="103dp"
-                tools:layout_editor_absoluteY="464dp" />
+            <com.google.android.material.navigation.NavigationView
+                android:id = "@+id/map"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="start"
+                android:fitsSystemWindows="true"/>
 
         </LinearLayout>
 
