--- a/app/src/main/res/layout/fragment_inicio_solicitar_curso.xml
+++ b/app/src/main/res/layout/fragment_inicio_solicitar_curso.xml
@@ -49,13 +49,12 @@
 
                 <EditText
                     android:id="@+id/inicio_solicitar_curso_descripcion"
-                    android:layout_width="252dp"
-                    android:layout_height="38dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:ems="10"
-                    android:inputType="textMultiLine"
-                    android:text="Descripción"                />
+                    android:inputType="textMultiLine" />
+
             </LinearLayout>
 
             <LinearLayout
@@ -80,22 +79,40 @@
                 android:orientation="horizontal">
 
                 <EditText
+                    android:id="@+id/editText5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:inputType="textPersonName"
+                    android:text="Name" />
+
+                <Button
                     android:id="@+id/solicitar_curso_fecha"
-                    android:layout_width="106dp"
+                    android:layout_width="62dp"
                     android:layout_height="39dp"
                     android:ems="18"
                     android:inputType="textPersonName"
-                    android:text="01/01/1999"
+                    android:text="fecha"
                     tools:layout_editor_absoluteX="24dp"
                     tools:layout_editor_absoluteY="350dp" />
 
                 <EditText
+                    android:id="@+id/editText6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:inputType="textPersonName"
+                    android:text="Name" />
+
+                <Button
                     android:id="@+id/inicio_solicitar_curso_hora"
-                    android:layout_width="99dp"
+                    android:layout_width="81dp"
                     android:layout_height="39dp"
                     android:ems="10"
                     android:inputType="textPersonName"
-                    android:text="12:00"
+                    android:text="hora"
                     tools:layout_editor_absoluteX="176dp"
                     tools:layout_editor_absoluteY="350dp" />
             </LinearLayout>
