--- a/app/src/main/res/layout/fragment_inicio_solicitar_curso.xml
+++ b/app/src/main/res/layout/fragment_inicio_solicitar_curso.xml
@@ -79,16 +79,16 @@
                 android:orientation="horizontal">
 
                 <EditText
-                    android:id="@+id/editText5"
+                    android:id="@+id/solicitar_curso_fecha"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
                     android:inputType="textPersonName"
-                    android:text="Name" />
+                    android:text="fecha" />
 
                 <Button
-                    android:id="@+id/solicitar_curso_fecha"
+                    android:id="@+id/solicitar_curso_fecha_boton"
                     android:layout_width="62dp"
                     android:layout_height="39dp"
                     android:ems="18"
@@ -98,16 +98,16 @@
                     tools:layout_editor_absoluteY="350dp" />
 
                 <EditText
-                    android:id="@+id/editText6"
+                    android:id="@+id/inicio_solicitar_curso_hora"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
                     android:inputType="textPersonName"
-                    android:text="Name" />
+                    android:text="hora" />
 
                 <Button
-                    android:id="@+id/inicio_solicitar_curso_hora"
+                    android:id="@+id/inicio_solicitar_curso_hora_boton"
                     android:layout_width="81dp"
                     android:layout_height="39dp"
                     android:ems="10"
