--- a/app/src/main/res/layout/card_item_misclases_alumnos.xml
+++ b/app/src/main/res/layout/card_item_misclases_alumnos.xml
@@ -24,71 +24,57 @@
         android:layout_height="match_parent">
 
         <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/foto_materia"
+            android:id="@+id/mis_clases_foto"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="16dp"
             android:src="@drawable/fotoperfiljuego"
             app:civ_border_color="#FF000000"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.03"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
 
         <TextView
             android:id="@+id/mis_clases_categoria"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="8dp"
+            android:layout_width="100dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="140dp"
+            android:layout_marginTop="20dp"
             android:text="Categoría"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintHorizontal_bias="0.068"
-            card_view:layout_constraintStart_toEndOf="@+id/foto_materia"
+            card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/mis_clases_profesores"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_width="100dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginStart="140dp"
             android:text="Nombre de profesor"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintHorizontal_bias="0.105"
-            card_view:layout_constraintStart_toEndOf="@+id/foto_materia"
-            card_view:layout_constraintTop_toBottomOf="@+id/mis_clases_categoria" />
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="204dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginStart="140dp"
             android:text="Hora"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintHorizontal_bias="0.059"
-            card_view:layout_constraintStart_toEndOf="@+id/foto_materia"
-            card_view:layout_constraintTop_toBottomOf="@+id/mis_clases_profesores" />
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/mis_clases_fecha"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginTop="80dp"
+            android:layout_marginStart="140dp"
             android:text="fecha"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintHorizontal_bias="0.06"
-            card_view:layout_constraintStart_toEndOf="@+id/foto_materia"
-            card_view:layout_constraintTop_toBottomOf="@+id/textView5" />
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toTopOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
